# ScaleApply-job-platform

./: .gitignore  README.md
ai-service/: .env.example  Dockerfile  demo_data.py  docker-compose.yml  main.py  pyproject.toml
ai-service/agents/: __init__.py  ats_agent.py  interview_agent.py  job_agent.py  knowledge_agent.py  recruiter_agent.py  resume_agent.py  skill_gap_agent.py  text_processor.py
ai-service/api/: app.py
ai-service/chunkers/: base.py  markdown_chunker.py
ai-service/config/: __init__.py  settings.py
ai-service/core/: __init__.py  exceptions.py  result.py
ai-service/embeddings/: __init__.py  base.py  factory.py  gemini_embeddings.py
ai-service/evaluation/: retrieval_evaluator.py
ai-service/events/: consumer.py  publisher.py  schemas.py
ai-service/healthchecks/: healthcheck.py
ai-service/indexers/: __init__.py  knowledge_indexer.py
ai-service/loaders/: __init__.py  knowledge_loader.py
ai-service/models/: __init__.py  ats_result.py  candidate_profile.py  embedding_result.py  indexing_report.py  interview_result.py  job_description.py  knowledge_chunk.py  knowledge_document.py  knowledge_response.py  recruiter_decision.py  retrieval_metrics.py  retrieval_result.py  skill_gap_result.py
ai-service/parsers/: __init__.py  base.py  docx_parser.py  factory.py  pdf_parser.py
ai-service/prompts/: __init__.py  ats_prompt.py  base.py  interview_prompt.py  job_prompt.py  knowledge_prompt.py  recruiter_prompt.py  resume_prompt.py  skill_gap_prompt.py
ai-service/providers/: __init__.py  base.py  factory.py  gemini_provider.py  groq_provider.py
ai-service/scripts/: startup.sh  wait_for_qdrant.sh
ai-service/services/: __init__.py  chunking_service.py  embedding_service.py  queue_service.py  retrieval_service.py
ai-service/tests/: conftest.py  test_ats_agent.py  test_ats_result.py  test_candidate_profile.py  test_chunking_service.py  test_embedding_factory.py  test_embedding_service.py  test_gemini_embeddings.py  test_gemini_provider.py  test_interview_agent.py  test_interview_result.py  test_job_agent.py  test_job_description.py  test_knowledge_agent.py  test_knowledge_chunk.py  test_knowledge_document.py  test_knowledge_indexer.py  test_knowledge_loader.py  test_markdown_chunker.py  test_parsers.py  test_provider_factory.py  (+9 more)
(+98 files in other folders)
