[tool.poetry]
name = "ai-recruitment-service"
version = "0.1.0"
description = "Enterprise AI Recruitment Platform — Resume Intelligence Agent"
authors = ["ScaleApply <team@scaleapply.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
# Core
pydantic = ">=2.7,<3.0"
pydantic-settings = ">=2.3,<3.0"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
httpx = ">=0.24.0"
redis = ">=5.0.0"

# File parsers
pypdf = ">=4.2,<5.0"
python-docx = ">=1.1,<2.0"

# LLM Providers (install only those you use)
google-generativeai = ">=0.7,<1.0"
tenacity = ">=8.0,<10.0"

# Vector Databases
qdrant-client = ">=1.8,<2.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-cov = ">=5.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.4"
mypy = ">=1.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
